# system-monitor-cli-app

./: .gitignore  CHANGELOG.md  Makefile  README.md  monitoring_terms.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.sh  setup.py  system_dashboard.py
config/: default.json
docs/: CONFIGURATION.md  DEVELOPMENT.md
scripts/: run_dashboard.sh
src/system_monitor/: __init__.py  config.py  dashboard.py  main.py
tests/: __init__.py  test_config.py  test_dashboard.py
